@@ -24,6 +24,8 @@ import java.io.StringWriter;
 import java.io.UnsupportedEncodingException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicLong;
 
 import javax.xml.transform.OutputKeys;
@@ -36,10 +38,13 @@ import javax.xml.transform.stream.StreamSource;
 import org.apache.commons.io.FileUtils;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.ZkClientConnectionStrategy.ZkUpdate;
+import org.apache.solr.common.util.ExecutorUtil;
+import org.apache.solr.common.util.SolrjNamedThreadFactory;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.KeeperException.NoNodeException;
 import org.apache.zookeeper.KeeperException.NodeExistsException;
+import org.apache.zookeeper.WatchedEvent;
 import org.apache.zookeeper.Watcher;
 import org.apache.zookeeper.ZooDefs;
 import org.apache.zookeeper.ZooKeeper;
@@ -72,10 +77,12 @@ public class SolrZkClient {
   
   private ZkCmdExecutor zkCmdExecutor;
 
+  private final ExecutorService zkCallbackExecutor = Executors.newCachedThreadPool(new SolrjNamedThreadFactory("zkCallback"));
+
   private volatile boolean isClosed = false;
   private ZkClientConnectionStrategy zkClientConnectionStrategy;
   private int zkClientTimeout;
-  
+
   public int getZkClientTimeout() {
     return zkClientTimeout;
   }
@@ -183,6 +190,24 @@ public class SolrZkClient {
     }
   }
 
+  private Watcher wrapWatcher (final Watcher watcher) {
+    if (watcher == null) return watcher;
+
+    // wrap the watcher so that it doesn't fire off ZK's event queue
+    return new Watcher() {
+      @Override
+      public void process(final WatchedEvent event) {
+        log.debug("Submitting job to respond to event " + event);
+        zkCallbackExecutor.submit(new Runnable () {
+          @Override
+          public void run () {
+            watcher.process(event);
+          }
+        });
+      }
+    };
+  }
+
   /**
    * Return the stat of the node of the given path. Return null if no such a
    * node exists.
@@ -206,11 +231,11 @@ public class SolrZkClient {
       return zkCmdExecutor.retryOperation(new ZkOperation() {
         @Override
         public Stat execute() throws KeeperException, InterruptedException {
-          return keeper.exists(path, watcher);
+          return keeper.exists(path, wrapWatcher(watcher));
         }
       });
     } else {
-      return keeper.exists(path, watcher);
+      return keeper.exists(path, wrapWatcher(watcher));
     }
   }
   
@@ -257,11 +282,11 @@ public class SolrZkClient {
       return zkCmdExecutor.retryOperation(new ZkOperation() {
         @Override
         public List<String> execute() throws KeeperException, InterruptedException {
-          return keeper.getChildren(path, watcher);
+          return keeper.getChildren(path, wrapWatcher(watcher));
         }
       });
     } else {
-      return keeper.getChildren(path, watcher);
+      return keeper.getChildren(path, wrapWatcher(watcher));
     }
   }
 
@@ -274,11 +299,11 @@ public class SolrZkClient {
       return zkCmdExecutor.retryOperation(new ZkOperation() {
         @Override
         public byte[] execute() throws KeeperException, InterruptedException {
-          return keeper.getData(path, watcher, stat);
+          return keeper.getData(path, wrapWatcher(watcher), stat);
         }
       });
     } else {
-      return keeper.getData(path, watcher, stat);
+      return keeper.getData(path, wrapWatcher(watcher), stat);
     }
   }
 
@@ -570,6 +595,7 @@ public class SolrZkClient {
       closeKeeper(keeper);
     } finally {
       connManager.close();
+      closeCallbackExecutor();
     }
     numCloses.incrementAndGet();
   }
@@ -606,6 +632,14 @@ public class SolrZkClient {
         throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR, "",
             e);
       }
+    }
+  }
+
+  private void closeCallbackExecutor() {
+    try {
+      ExecutorUtil.shutdownAndAwaitTermination(zkCallbackExecutor);
+    } catch (Exception e) {
+      SolrException.log(log, e);
     }
   }
 
